--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -62,7 +62,8 @@ p {
     font-family: 'roboto', sans-serif;
     width: 50px;
     height: 20px;
-    border-radius: 1;
+    border: 1px solid darkgray;
+    border-radius: 10px;
 }
 
 .link {
@@ -87,7 +88,9 @@ p {
     max-width: 60%;
     max-height: 450px;
     overflow: hidden;
-    padding: 0px 0px 0px 32px;
+    border-radius: 15px;
+    position: relative;
+    left: 15px;
 }
 
 .button2 {
@@ -104,6 +107,7 @@ p {
     font-size: large;
     background-color: darkgray;
     color: whitesmoke;
+    border-radius: 15px;
 }
 
 #colmar {
