--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,6 +11,7 @@ h3 {
     position: relative;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
+    font-size: 1.8rem;
     text-align: center;
 }
 
@@ -52,7 +53,7 @@ img {
 .logo {
     display: flex;
     position: inherit;
-    height: 32px;
+    height: 48px;
     align-items: center;
 } 
 
@@ -61,8 +62,8 @@ img {
     justify-content: flex-start;
     align-items: center;
     position: relative;
-    left: 16px;
-    left: 24px;
+    left: 14px;
+    top: 5px;
 }
 
 .linksbox {
