--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -91,6 +91,7 @@ a {
     position: inherit;
     height: 48px;
     align-items: center;
+    animation: rotation 800ms ease-out;
 } 
 
 .name {
@@ -114,9 +115,13 @@ a {
     background-color: darkslategray;
     color: whitesmoke;
     font-family: 'roboto', sans-serif;
-    width: 50px;
-    height: 20px;
+    font-size: 15px;
+    width: 65px;
+    height: 25px;
     border-radius: 10px;
+    padding-left: 4px;
+    margin-left: 15px;
+    margin-right: 10px;
 }
 
 .link {
@@ -158,7 +163,7 @@ a {
     position: relative;
 }
 
-@media screen and (max-width: 740px) {
+@media screen and (max-width: 750px) {
     .container {
         flex-direction: column;
         overflow: scroll;
@@ -229,6 +234,13 @@ a {
     align-content: center;
     flex-direction: column;
     padding-right: 1rem;
+} 
+
+.infobox2 {
+    height: 90%;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
 } 
 
 .infobox button {
